<resources>
<<<<<<< HEAD
    <string name="app_name">All About Igdtuw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="societies">Societies</string>
    <string name="recommended_books">Recommended books</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="sign_in">Sign In</string>
    <string name="rate_us">Rate us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="igdtuw">IGDTUW</string>

=======
    <string name="app_name">AllAboutIgdtuw</string>
>>>>>>> b82410c96dac150003be410b29674a64c9c8a9ce
</resources>
