<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--TODO Replace icons in nav drawer-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_societies"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/societies" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/books"
            android:title="@string/recommended_books" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/login"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@android:drawable/btn_star"
                android:title="@string/rate_us" />
        </menu>
    </item>

</menu>
